<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/input_panel_pick_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_date_range_black_24dp"
            android:contentDescription="@string/cd_select_date" />

        <ImageButton
            android:id="@+id/input_panel_set_priority_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_priority_high_black_24dp"
            android:contentDescription="@string/sd_select_priority" />

        <ImageButton
            android:id="@+id/input_panel_archive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_move_to_inbox_black_24dp"
            android:contentDescription="@string/cd_move_to_archive" />

    </LinearLayout>
</layout>